<resources>
    <string name="app_name">ChitChat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_after_login_page">AfterLoginPage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="login">Login</string>
    <string name="create_account">Next</string>
    <string name="create_account_heading">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account_text">Not Registered yet ? Create Account</string>
    <string name="login_text">Already have a Account ? Login</string>
    <string name="create_account_terms">By Clicking on create account you are accepting our Terms and Conditions</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="city">City</string>
    <string name="create_account_2_submit">Create Account</string>
    <string name="upload_profile_pic">Upload profile pic</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="tab_chatrooms">Active Chatrooms</string>
    <string name="tab_myprofile">My Profile</string>
    <string name="tab_users">View Users</string>
    <string name="tab_chatroom">Chatroom</string>
    <string name="tab_chat_users">Active Users</string>
    <string name="label_join">JOIN</string>
    <string name="invalid_login">Please Input valid Password and Login Information</string>
    <string name="label_view">View</string>
    <string name="gender">Gender</string>
    <string name="send_button">Send</string>
    <string name="enter_message_hint">Enter message here</string>
    <string name="update_city">Update City</string>
    <string name="update_gender">Update Gender</string>
    <string name="update_last_name">Update Last Name</string>
    <string name="update_first_name">Update First Name</string>
    <string name="update_password">Update Password</string>
    <string name="profile_image">profile image</string>
</resources>
